working on getting query by id
